# decentralized_loam

./: CMakeLists.txt  README.md  package.xml
config/: demo_config.yaml
include/: cell_map_keyframe.hpp  ceres_pose_graph_3d.hpp  common.h  custom_point_cloud_interface.hpp  laser_feature_extractor.hpp  laser_mapping.hpp  lidar_agent.hpp  livox_feature_extractor.hpp  mul_lidar_management.hpp  point_cloud_registration.hpp  scene_alignment.hpp
include/tools/: common_tools.h  kalman_filter.cpp  pcl_tools.hpp  tools_ceres.hpp  tools_logger.hpp  tools_random.hpp  tools_ros.hpp
launch/: demo.launch
msg/: Loam_livox_custom_point_cloud.msg
rviz_cfg/: rosbag_c.rviz
source/: ekf_pose_6d.cpp  ekf_pose_6d.hpp  laser_scan2scan.cpp  lidar_agent.cpp  mapping_pointcloud_cell.cpp  mapping_pointcloud_keyframe.cpp  mapping_pointcloud_map.cpp  mapping_process.cpp  mapping_service.cpp  point_cloud_registration.cpp  ros_test.cpp  scene_alignment.cpp
